<resources>
    <string name="app_name">Weather</string>
    <string name="city">City</string>
    <string name="city_hint">Choose city</string>
    <string name="temperature">Temperature</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="OK">OK</string>
    <string name="enter_city">Enter the name of the city</string>
    <string name="settings">Settings</string>
    <string name="settings_style">Dark/light style</string>
    <string name="settings_language">Choose language</string>
</resources>