<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/select_city_fragment">

    <EditText
        android:id="@+id/et_select_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_city"
        />

    <CheckBox
        android:id="@+id/cb_cloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cloudiness"
        android:checked="true"
        />

    <CheckBox
        android:id="@+id/cb_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:checked="true"
        />

    <Button
        android:id="@+id/btn_select_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/OK"
        />
</LinearLayout>